# plottery

./: .gitignore  README.md  pyproject.toml
demo/: README.md  demo_auto_context.py  demo_full.py  demo_overlay.py  demo_simple.py
documentazione/: README.md  USERGUIDE.md
plottery/: __init__.py  chart.py  config.py  models.py  paper.py
plottery/utils/: __init__.py  pdf.py  peaks.py
tests/: __init__.py  test_chart.py  test_models.py  test_paper.py  test_peaks.py
