[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plottery"
version = "0.2.0"
description = "Extract numerical data from scientific chart images using Claude Vision"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Plottery Authors"}
]
keywords = ["chart", "data extraction", "scientific", "plot", "spectrum", "llm", "vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "anthropic>=0.18",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.23"]
peaks = ["scipy>=1.11"]
excel = ["openpyxl>=3.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "python-dotenv>=1.0"]
all = ["plottery[pdf,peaks,excel,dev]"]

[project.urls]
Homepage = "https://github.com/plottery/plottery"
Documentation = "https://github.com/plottery/plottery#readme"
Repository = "https://github.com/plottery/plottery"

[tool.hatch.build.targets.wheel]
packages = ["plottery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
